Fixes regarding overflow.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,8 @@ div[custom-sidenav-content]{
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: hidden;  
+}
+
+app-video-options-button{
+  display: hidden;
 }
