--- a/src/app/video-view/video-view.component.css
+++ b/src/app/video-view/video-view.component.css
@@ -1,6 +1,7 @@
 :host{
     display: flex;
     flex: 1;
+    overflow: hidden;
 }
 
 :host iframe{
